src/main/resources/tests/Semantics/good/modeIn.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure TestIn is
X : integer;
Y : integer;
function Get(X : in integer) return integer is
Y : integer;
begin
    Y := X; -- I can read X
    return Y;
end Get;
begin
   Y := X; -- I can read X
end TestIn;
