src/main/resources/tests/Semantics/bad/assignmentType1.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure ExampleProcedure is
   X : integer := true;
begin
    put('E');
end ExampleProcedure;
